Fixed vertical alignment of logo

--- a/style/navigation.css
+++ b/style/navigation.css
@@ -8,7 +8,7 @@ header {
     display: flex;
     flex-direction: row;
 
-    z-index: 10000;
+    /* z-index: 10000; */
 }
 
 header #logo {
@@ -17,10 +17,14 @@ header #logo {
 
     background-color: #e4000f;
 
-    text-align: center;
-    align-content: center;
+    /* text-align: center;
+    align-content: center; */
 
+    justify-content: space-around;
+    align-items: center;
+    
     pointer-events: none;
+    display: flex;
 }
 
 header #logo > object {
